--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="canonical" href="" />
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
     <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
-    <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="build/css/styles.css" type="text/css">
     <style type="text/css">
       body { font-size:10px; margin:0; padding:0; } 
       .wrapper { width:100%; max-width:80em; margin:0 auto; }
