--- a/index.html
+++ b/index.html
@@ -85,6 +85,26 @@
       <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me? " he thought. It wasn't a dream.</p>
       <p>His room, a proper human room although a little too small, lay peacefully between its four familiar walls.</p>
       <p>A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at the dull weather. Drops</p>
+
+
+<form>
+  <div class="grid-container">
+    <div class="grid-x grid-padding-x">
+      <div class="medium-6 cell">
+        <label>Input Label
+          <input type="text" placeholder=".medium-6.cell">
+        </label>
+      </div>
+      <div class="medium-6 cell">
+        <label>Input Label
+          <input type="text" placeholder=".medium-6.cell">
+        </label>
+      </div>
+    </div>
+  </div>
+</form>
+
+
     </div>
     <div class="clearfix post-content">
       <div class="post-content-1">
@@ -117,7 +137,6 @@
 </div>
   <script defer src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <script defer type="text/javascript">
-
     /* IFFY */
     ;(function (window, document, undefined) {
       'use strict';
@@ -129,26 +148,14 @@
     function init() {
       // ASYNC
       console.log('async');
+      var js_version = "0.0.1";
+      var loadJS = document.createElement("script");
+      loadJS.src = "./build/js/scripts.js?v=" + js_version;
+      document.body.appendChild(loadJS);
     }
     if (window.addEventListener) window.addEventListener("load", init, false);
     else if (window.attachEvent) window.attachEvent("onload", init);
     else window.onload = init;
-
-    /* Revealing Module Pattern */
-    var myThing = window.myThing || [];
-    myThing = (function () {
-      var publicThing = {};
-      var privateMethod = function () {
-        // Code goes here...
-        console.log('RMD');
-      };
-      publicThing.publicMethod = function () {
-        privateMethod();
-        // Code goes here...
-      };
-      return publicThing;
-    })();
-    myThing.publicMethod();
 
 // https://vanillajstoolkit.com/code-snippets
 // https://vanillajstoolkit.com/helpers/
