--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 
       <div class="cards">
         <div class="card item">
-          <div class="card image"><img src="https://tailwindcss.com/img/card-top.jpg" /></div>
+          <div class="card image"><img src="./assets/img/card-top.jpg" /></div>
           <div class="card text">
             <h3>The Coldest Sunset</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
           </div>
           <div class="card meta">
             <div class="subitem author">
-              <a href=""><img src="https://tailwindcss.com/img/jonathan.jpg" /></a>
+              <a href=""><img src="./assets/img/card-author.jpg" /></a>
               <div class="">
                 <a href="" class="name">Tom Stoppard</a>
                 <a href="" class="date">Aug 29</a>
