rework css structure

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 <div class="wrapper">
   <div class="content">
       
-      <p>https://tailwindcss.com/components/buttons/</p>
+      <p><a href="https://tailwindcss.com/components/buttons/">https://tailwindcss.com/components/buttons/</a></p>
 
       <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin.
-        <span class="block"><a class="button_small allcaps" href="">text</a></span>
+        <span class="block"><a class="button_small allcaps color_light bg_action_secondary" href="">text</a></span>
       </p>
       
       <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin.</p>
