--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <div class="logo">
       <a href=""><img src="./assets/img/1x1.png" /></a>
     </div>
-    <nav class="primary">
+    <nav id="nav" class="primary">
       <a class="allcaps" href="/home">Home</a>
       <a class="allcaps" href="/about">About</a>
       <a class="allcaps" href="/news">News</a>
       <a class="allcaps" href="/contact">Contact</a>
     </nav>
-    <div class="menu">
+    <div id="menu" class="menu">
       <svg class="fill-current" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><title>Menu</title> <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path></svg>
     </div>
   </header>
@@ -181,38 +181,39 @@
 
 
   <script defer src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script defer src="./build/js/app.bundle.js"></script>
   <script defer type="text/javascript">
 
-function setup_nav() {
-  //https://codepen.io/escherina/pen/pyxYqz
-  var nav = document.querySelector("nav.primary"),
-      navToggle = document.querySelector(".menu");
-  if (navToggle) {
-    navToggle.addEventListener("click", function(e) {
-      if (nav.className == "open") {
-        nav.className = "primary";
-      } else {
-        nav.className = "open";
-      }
-      e.preventDefault();
-    }, false);
-  }
-  /* Any click outside of the nav element will close the menu if it's open */
-  var specifiedElement = document.querySelector('div.menu');
-  document.addEventListener('click', function(event) {
-    var isClickInside = specifiedElement.contains(event.target);
-    if (!isClickInside && nav.className == "open") {
-      nav.className = "primary";
-    } 
-  });
-}
+// function setup_nav() {
+//   //https://codepen.io/escherina/pen/pyxYqz
+//   var nav = document.querySelector("nav.primary"),
+//       navToggle = document.querySelector(".menu");
+//   if (navToggle) {
+//     navToggle.addEventListener("click", function(e) {
+//       if (nav.className == "open") {
+//         nav.className = "primary";
+//       } else {
+//         nav.className = "open";
+//       }
+//       e.preventDefault();
+//     }, false);
+//   }
+//   /* Any click outside of the nav element will close the menu if it's open */
+//   var specifiedElement = document.querySelector('div.menu');
+//   document.addEventListener('click', function(event) {
+//     var isClickInside = specifiedElement.contains(event.target);
+//     if (!isClickInside && nav.className == "open") {
+//       nav.className = "primary";
+//     } 
+//   });
+// }
 
     /* IFFY */
     ;(function (window, document, undefined) {
       'use strict';
       // IFFY code
       console.log('IFFY');
-      setup_nav();
+      //setup_nav();
 
 
 
