--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
     <link rel="stylesheet" href="build/css/styles.css" type="text/css">
     <style type="text/css">
-
-
-
+      /* critical css */
     </style>
     <!-- http://ogp.me/ -->
     <meta property="og:title" content="" />
@@ -29,46 +27,48 @@
   <body>
 
 <div class="wrapper">
-  <header>
-    <div class="logo">
-      <a href=""><img src="./assets/img/1x1.png" /></a>
-    </div>
-    <nav id="nav" class="primary">
-      <a class="allcaps" href="/home">Home</a>
-      <a class="allcaps" href="/about">About</a>
-      <a class="allcaps" href="/news">News</a>
-      <a class="allcaps" href="/contact">Contact</a>
-    </nav>
-    <div id="menu" class="menu">
-      <svg class="fill-current" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><title>Menu</title> <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path></svg>
+
+  <header id="header">
+    <div class="container">
+      <div class="logo">
+        <a href=""><img src="./assets/img/1x1.png" alt="Page Logo" /></a>
+      </div>
+      <nav aria-label="primary" id="nav" class="primary">
+        <a class="allcaps" href="/home">Home</a>
+        <a class="allcaps" href="/about">About</a>
+        <a class="allcaps" href="/news">News</a>
+        <a class="allcaps" href="/contact">Contact</a>
+      </nav>
+      <div id="menu" class="menu">
+        <svg class="fill-current" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><title>Menu</title> <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path></svg>
+      </div>
     </div>
   </header>
 
-  <div class="content">
-    <form class="form_inline">
-      <fieldset>
-        <!-- <legend>Your Name</legend> -->
-        <div class="row">
-          <div class="label"><label for="name_1">First Name</label></div>
-          <div class="input"><input type="text" name="name_1" id="name_1" value="" placeholder="Jane" /></div>
-        </div>
-        <div class="row">
-            <div class="label"> <label for="name_2">Last Name</label></div>
-          <div class="input"><input type="text" name="name_2" id="name_2" value="" placeholder="Doe" /></div>
-        </div>
-        <div class="row">
-            <div class="label"><label for="email">Email</label></div>
-          <div class="input"><input type="email" name="email_1" id="email_1" value="" placeholder="user@gmail.com" /></div>
-        </div>
-        <div class="row">
-            <div class="label"><label for="submit"></label></div>
-            <div class="input"><input type="submit" class="button allcaps" /></div>
-        </div>
-      </fieldset>
-    </form>
-  </div>
+  <main id="main" role="main" class="clearfix content">
+    <div class="container">
 
-</div>
+      <form class="form_inline">
+        <fieldset>
+          <!-- <legend>Your Name</legend> -->
+          <div class="row">
+            <div class="label"><label for="name_1">First Name</label></div>
+            <div class="input"><input type="text" name="name_1" id="name_1" value="" placeholder="Jane" /></div>
+          </div>
+          <div class="row">
+              <div class="label"> <label for="name_2">Last Name</label></div>
+            <div class="input"><input type="text" name="name_2" id="name_2" value="" placeholder="Doe" /></div>
+          </div>
+          <div class="row">
+              <div class="label"><label for="email">Email</label></div>
+            <div class="input"><input type="email" name="email_1" id="email_1" value="" placeholder="user@gmail.com" /></div>
+          </div>
+          <div class="row">
+              <div class="label"><label for="submit"></label></div>
+              <div class="input"><input type="submit" class="button allcaps" /></div>
+          </div>
+        </fieldset>
+      </form>
 
 <div class="fullwidth darkbg">
   <p class="">The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek.</p>
