add no-js styles

--- a/index.html
+++ b/index.html
@@ -24,27 +24,68 @@
     <meta property="og:image" content="" />
     <!-- https://schema.org/docs/full.html -->
   </head>
-  <body>
+  <body class="no-js">
 
 <div class="wrapper">
 
-  <header id="header">
-    <div class="container">
-      <div class="logo">
-        <a href=""><img src="./assets/img/1x1.png" alt="Page Logo" /></a>
-      </div>
-      <nav aria-label="primary" id="nav" class="primary">
-        <a class="allcaps" href="/home">Home</a>
-        <a class="allcaps" href="/about">About</a>
-        <a class="allcaps" href="/news">News</a>
-        <a class="allcaps" href="/contact">Contact</a>
-      </nav>
-      <div id="menu" class="menu">
-        <svg class="fill-current" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><title>Menu</title> <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path></svg>
-      </div>
-    </div>
+  <header>
+    <h1><a href="" tabindex="0">Page Title</a></h1>
+    <button class="menu-icon closed" data-menu="primary_nav" id="primary_nav_icon" tabindex="-1" aria-controls="menu" aria-label="Site Menu">
+      <svg class="icon icon-expand" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><use xlink:href="#icon-expand"></svg>
+      <svg class="icon icon-contract" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><use xlink:href="#icon-contract"></use></svg>
+      </button>
   </header>
-
+  <nav 
+    class="menu"
+    id="primary_nav"
+    data-menu_state="closed" 
+    aria-label="Primary Navigation"
+    aria-hidden="true"
+    
+  >
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li class="subnav" data-menu="about">
+          <a class="subnav_title" href="#">About</a>
+          <ul class="closed" id="about" data-menu_state="closed">
+            <li><a href="#">subitem 1</a></li>
+            <li><a href="#">subitem 2</a></li>
+        </ul>
+      </li>
+      <li class="subnav" data-menu="contact">
+          <a class="subnav_title" href="#">Contact</a>
+          <ul class="closed" id="contact" data-menu_state="closed">
+              <li><a href="#">subitem 1</a></li>
+              <li><a href="#">subitem 2</a></li>
+              <li><a href="#">subitem 3</a></li>
+              <li><a href="#">subitem 4</a></li>
+          </ul>
+      </li>
+      <li><a href="#">Item 1</a></li>
+      <li><a href="#">Item 2</a></li>
+      <li><a href="#">Item 3</a></li>
+      <li><a href="#">Item 4</a></li>
+      <!-- <li><a href="#">Item 5</a></li>
+      <li><a href="#">Item 6</a></li>
+      <li><a href="#">Item 7</a></li>
+      <li><a href="#">Item 8</a></li>
+      <li><a href="#">Item 9</a></li>
+      <li><a href="#">Item 10</a></li> -->
+    </ul>
+  </nav>
+  
+  <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="128" height="32" viewBox="0 0 128 32">
+    <defs>
+    <g id="icon-expand">
+        <path class="menu-open menu-opened" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+    </g>
+    <g id="icon-contract">
+        <path class="menu-close" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+    </g>
+    </defs>
+  </svg>  
+  
+  
   <main id="main" role="main" class="clearfix">
     <div class="container">
 
@@ -114,35 +155,12 @@
   <script defer src="./build/js/app.bundle.js"></script>
   <script defer type="text/javascript">
 
-// function setup_nav() {
-//   //https://codepen.io/escherina/pen/pyxYqz
-//   var nav = document.querySelector("nav.primary"),
-//       navToggle = document.querySelector(".menu");
-//   if (navToggle) {
-//     navToggle.addEventListener("click", function(e) {
-//       if (nav.className == "open") {
-//         nav.className = "primary";
-//       } else {
-//         nav.className = "open";
-//       }
-//       e.preventDefault();
-//     }, false);
-//   }
-//   /* Any click outside of the nav element will close the menu if it's open */
-//   var specifiedElement = document.querySelector('div.menu');
-//   document.addEventListener('click', function(event) {
-//     var isClickInside = specifiedElement.contains(event.target);
-//     if (!isClickInside && nav.className == "open") {
-//       nav.className = "primary";
-//     } 
-//   });
-// }
-
     /* IFFY */
     ;(function (window, document, undefined) {
       'use strict';
       // IFFY code
       console.log('IFFY');
+      // setup_totalnav();
       //setup_nav();
 
 
