--- a/dev2.html
+++ b/dev2.html
@@ -34,14 +34,23 @@
     border:1px solid #000;
     height:800px;
 }
-.row {
+.title-row {
+    display: grid;
+    place-items: center;
+}
+.text-row {
+    display:grid;
+    grid-template-columns:1fr 1fr;
+}
+.title-row.away { margin-right:50%; }
+.title-row.home { margin-left:50%; }
+.bar-row {
     display:flex;
     flex-wrap:nowrap;
     height:40px;
-    margin:16px 0;
+    margin:0.25rem 0 1rem 0;
     max-width:80vw;
     position:relative;
-    
     /* margin-left:50%; */
     /* justify-content:center; */
 }
@@ -54,42 +63,193 @@
     height:40px;
     position:absolute;
     left:50%;
-    color:white;
+    color:black;
 }
-.away { background-color:red; }
-.home { background-color:blue; }
-.one {
-    flex-direction:row-reverse;
+.text.away { justify-self:end; margin-right:0.5rem;  }
+.text.home { justify-self:start; margin-left:0.5rem; }
+
+.bar.away { background-color:red; }
+.bar.home { background-color:blue; }
+.bar.lesser {  z-index:1; }
+.bar.one {
+    /* flex-direction:row-reverse;
     width:30%;
-    margin-left:-30%;
+    margin-left:-30%; */
 }
-.two {
+.bar.two {
     /* flex-direction:row; */
-    width:40%;
+    /* width:40%; */
 }
-.three {
-    width:30%;
+.bar.three {
+    /* width:30%; */
     /* opacity:0.5;
     z-index:10; */
     /* direction:rtl;
     flex-direction:row-reverse; */
+    /* z-index:1; */
 }
-.four {
-    width:20%;
+.bar.four {
+    /* width:40%;
+    z-index:0; */
+}
+.away-plus { }
+.away-minus { }
+.bar-center {
+    height:40px;
+    position:absolute;
+    left:50%;
+    bottom:50%;
+    color:black;
+    border:1px solid black;
+    height:100px;
 }
 </style>
 
 <div class="wrapper">
-    <div class="row">
-        <div class="bar away one">1.34</div>
-        <div class="bar home two">2.23</div>
+    <div class="title-row away" id="away">Away offense</div>
+    <div class="text-row">
+        <!-- 3.61 (+23.58%%)
+        2.81 (-0.18%) -->
+        <div class="text away" id="away_all_xGF_text"></div>
+        <div class="text home" id="home_all_xGA_text"></div>
     </div>
-    <div class="row">
-        <div class="bar away three">1.90</div>
-        <div class="bar home four">2.78</div>
+    <div class="bar-row">
+        <div class="bar-center"></div>
+        <div class="bar away greater" id="away_all_xGF" style=""></div>
+        <div class="bar home lesser" id="home_all_xGA" style="width:0.18%"></div>
+    </div>
+    <div class="title-row home">Home offense</div>
+    <div class="text-row">
+        <div class="text away">2.77 (2.29%)</div>
+        <div class="text home">3.19 (9.81%)</div>
+    </div>
+    <div class="bar-row">
+        <div class="bar-center"></div>
+        <div class="bar away lesser" style="width:2.29%;"></div>
+        <div class="bar home greater" style="width:12.52%"></div>
     </div>
 
+
+    <div class="title-row away">Away 5on5</div>
+    <div class="text-row">
+        <div class="text away">2.88 (+17.31%)</div>
+        <div class="text home">2.40 (-1.48%)</div>
+    </div>
+    <div class="bar-row">
+        <div class="bar-center"></div>
+        <div class="bar away greater" style="width:17.31%; margin-left:-17.31%;"></div>
+        <div class="bar home lesser" style="width:1.48%"></div>
+    </div>
+    <div class="title-row home">Home 5on5</div>
+    <div class="text-row">
+        <div class="text away">2.56 (-8.25%)</div>
+        <div class="text home">2.52 (2.65%)</div>
+    </div>
+    <div class="bar-row">
+        <div class="bar-center"></div>
+        <div class="bar away lesser" style="width:8.25%; margin-left:-8.25%"></div>
+        <div class="bar home greater" style="width:2.65%"></div>
+    </div>
+
+    <div class="title-row away">Away Power Play</div>
+    <div class="text-row">
+        <div class="text away">7.52 (+3.80%)</div>
+        <div class="text home">6.81 (-0.29%)</div>
+    </div>
+    <div class="bar-row">
+        <div class="bar-center"></div>
+        <div class="bar away greater" style="width:3.80%; margin-left:-3.80%;"></div>
+        <div class="bar home lesser" style="width:0.29%"></div>
+    </div>
+    <div class="title-row home">Home Power Play</div>
+    <div class="text-row">
+        <div class="text away">4.72 (30.49%)</div>
+        <div class="text home">5.49 (-24.22%)</div>
+    </div>
+    <div class="bar-row">
+        <div class="bar-center"></div>
+        <div class="bar away greater" style="width:30.49%; margin-left:-30.49%"></div>
+        <div class="bar home lesser" style="width:24.22%; margin-left:-24.22%"></div>
+    </div>
+
+
 </div>
+
+<script src="https://cdn.jsdelivr.net/gh/cferdinandi/saferInnerHTML@1/dist/saferInnerHTML.polyfills.min.js"></script>
+
+<script defer type="text/javascript">
+    var myThing = window.myThing || [];
+    myThing = (function () {
+        var publicThing = [
+            g2021020174 = {
+                "away": {
+                    "team": "CAR",
+                    "xGF": 3.59,
+                    "xGA": 2.77,
+                },
+                "home":{
+                    "team": "FLA",
+                    "xGF": 3.19,
+                    "xGA": 2.84,
+                }
+            }
+        ];
+    var privateMethod = function () {
+        // Code goes here...
+        console.log('RMD');
+        console.log(publicThing[0]['away']['team']);
+        var away = document.querySelector('#away');
+        saferInnerHTML(away, publicThing[0]['away']['team'], true);
+
+        var away_all_xGF_text = document.querySelector('#away_all_xGF_text');
+        var home_all_xGA_text = document.querySelector('#home_all_xGA_text');
+        var away_all_xGF_text_value = publicThing[0]['away']['xGF'] + " (" +calc( "away", "all_xGF", publicThing[0]['away']['xGF']) + "%)";
+        var home_all_xGA_text_value = publicThing[0]['home']['xGA'] + " (" +calc( "home", "all_xGA", publicThing[0]['home']['xGA']) + "%)";
+        saferInnerHTML(away_all_xGF_text, away_all_xGF_text_value, true);
+        saferInnerHTML(home_all_xGA_text, home_all_xGA_text_value, true);
+
+        var away_all_xGF = document.querySelector('#away_all_xGF');
+        tthis = calc("away", "all_xGF", publicThing[0]['away']['xGF']);
+        away_all_xGF.style.width = String(calc("away", "all_xGF", publicThing[0]['away']['xGF']))+"%";
+        away_all_xGF.style.marginLeft = "-"+String(calc("away", "all_xGF", publicThing[0]['away']['xGF']))+"%";
+
+        var home_all_xGA = document.querySelector('#home_all_xGA');
+
+    };
+    var x100 = function(value) {
+        return value * 100;
+    }
+    var median_values = {
+        "all_xGF": 2.905,
+        "all_xGA": 2.835,
+        "5on5_xGF": 2.455,
+        "5on5_xGA": 2.365,
+        "st_xGF": 7.245,
+        "st_xGA": 6.79
+      }
+    var calc = function( site, type, value ) {
+        if( type.slice(-2) === "GF" ) {
+            var output1 = ( x100(value) / x100(median_values[type]) );
+            var output2 = ( output1 - 1 ) * 100;
+            // console.log(output2.toFixed());
+            return output2.toFixed(2);
+        }
+        if( type.slice(-2) === "GA" ) {
+            var output1 = ( x100(value) / x100(median_values[type]) );
+            var output2 = ( 1- output1 ) * 100;
+            // console.log(output2.toFixed());
+            return output2.toFixed(2);
+        }
+    }
+    publicThing.publicMethod = function () {
+        privateMethod();
+        // Code goes here...
+    };
+    return publicThing;
+    })();
+    myThing.publicMethod();
+
+  </script>
 
   </body>
   </html>
